More fixing, less code.